src/objects/PSFileAttachDef__c.object
<CustomObject>
    <fields>
        <fullName>Allowed_Extensions__c</fullName>
        <label>Allowed Extensions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Field__c</fullName>
        <label>Filter Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Values__c</fullName>
        <label>Filter Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Template__c</fullName>
        <label>Online Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PSFileAttachTemplate__c</fullName>
        <label>Template</label>
        <referenceTo>PSFileAttachTemplate__c</referenceTo>
        <relationshipLabel>PSFileAttachDef</relationshipLabel>
        <relationshipName>PSFileAttachDef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_Field__c</fullName>
        <inlineHelpText>The API name of Boolean field on object that will be set to True when file has been uploaded</inlineHelpText>
        <label>Upload Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PSFileAttachDef</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>File ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSFileAttachDef</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>